Gallerynya tambahin lagi dan bikin lebih interaktif aku suntuk ga bisa banyak banyak oh iyo cok alertmu sak bajek cok ga kurang akeh a cok

--- a/index.html
+++ b/index.html
@@ -49,10 +49,8 @@
 
     <main>
         <div class="main-plans">
-            <h1>The Plans</h1>
+            <h1>Welcome to the City</h1>
         </div>
-
-        <hr class="main-hr">
 
         <div class="main-gallery">
             <h1>Gallery</h1>
