Update dari fal

--- a/index.html
+++ b/index.html
@@ -6,51 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
-    <title>ICity</title>
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <title>Home - ICity</title>
 </head>
 
 <body>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Plans</a>
-        <a href="#">Gallery</a>
-        <a href="#">Contact</a>
-        <a href="#">About</a>
+        <div class="logo">
+            <a href="#">
+                <h1>ICity</h1>
+            </a>
+        </div>
+        <div class="navbar">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Collection</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </div>
     </nav>
-
-    <hr>
 
     <header>
     <div class="main-header">    
         <div class="header">
             <div class="header-main">
-                <h1>ICity</h1>
+                <h1>Welcome to ICity</h1>
                 <hr>
-                <p>Smart City For the Future</p>
-            </div>
-
-            <div class="header-description">
-                <hr class="header-hr">
-                <p>Smart city is a city that is so smart. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Autem, tempore necessitatibus similique suscipit voluptatum repudiandae incidunt eveniet eum sunt
-                    omnis rerum cupiditate velit est architecto! Nulla iure nemo perferendis doloremque quo quibusdam
-                    fugiat fugit facere similique, nam vitae ullam ipsum optio aperiam dolorum. Dolorem recusandae nihil
-                    deserunt, ad ipsam accusamus quia molestias vel. Pariatur rerum ab maiores! Animi consequatur sunt
-                    neque expedita? Inventore harum perspiciatis molestiae natus consequatur. Optio sed facere ratione
-                    incidunt commodi reprehenderit neque, sint veniam alias sit beatae quas dolor, dignissimos
-                    voluptatum quae. Ipsam, id quam! Vero itaque similique harum enim quaerat expedita repudiandae unde
-                    beatae nostrum?</p>
+                <p>Plans of Smart City For The Future</p>
+                <a href="#article">Learn More</a>
             </div>
         </div>
     </div>
     </header>
 
-    <hr>
-
     <main>
-        <div class="main-plans">
-            <h1>Welcome to the City</h1>
-        </div>
+        <article id="article">
+            <div class="header-description">
+                <h1>What is ICity?</h1>
+                <hr class="header-hr">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque rerum, vel molestias voluptatem quasi deserunt doloribus molestiae ullam minus! Veritatis odit placeat iste, eligendi esse perspiciatis facere officia? Facere consequuntur minima cumque pariatur vero dolorum necessitatibus, animi aperiam tempora similique, fuga laborum debitis neque, incidunt odit excepturi praesentium eveniet ex eius! Adipisci iusto vitae, ducimus cupiditate consectetur deserunt tempore. Voluptas, reprehenderit optio. Nam voluptates nemo minus odio, pariatur eaque consectetur a, ullam quas rem porro quaerat qui? Ea odit perspiciatis delectus adipisci deleniti, ipsa mollitia nemo recusandae dolores, culpa atque odio sed magni maiores ex placeat. Consequatur ut accusamus minus?</p>
+            </div>
+        </article>
 
         <div class="main-gallery">
             <h1>Gallery</h1>
@@ -79,16 +76,16 @@
                 <hr>
                 <ul>
                     <li>
-                        <img src="#" alt="contact">
+                        <i class="ph ph-phone"></i>
                         +62 1234 5678 9012
                     </li>
                     <li>
-                        <img src="#" alt="instagram">
-                        @Instagram
+                        <i class="ph ph-instagram-logo"></i>
+                        Instagram
                     </li>
                     <li>
-                        <img src="#" alt="Facebook">
-                        @Facebook
+                        <i class="ph ph-facebook-logo"></i>
+                        Facebook
                     </li>
                 </ul>
             </div>
@@ -97,7 +94,7 @@
                 <h3>About Us</h3>
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                <button>See More</button>
+                <a href="#">See More</a>
             </div>
         </div>
 
