Minor update - fal

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
         <div class="navbar">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Collection</a></li>
+                <li><a href="#">Plans</a></li>
+                <li><a href="#">Gallery</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">About</a></li>
             </ul>
@@ -27,14 +27,12 @@
 
     <header>
         <div class="main-header">    
-            <div class="header">
                 <div class="header-main">
                     <h1>Welcome to ICity</h1>
                     <hr>
                     <p>Plans of Smart City For The Future</p>
-                    <a href="#article">Learn More</a>
+                    <a href="#article" id="learn-more">Learn More</a>
                 </div>
-            </div>
         </div>
     </header>
 
@@ -43,7 +41,7 @@
             <div class="header-description">
                 <h1>What is ICity?</h1>
                 <hr class="header-hr">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque rerum, vel molestias voluptatem quasi deserunt doloribus molestiae ullam minus! Veritatis odit placeat iste, eligendi esse perspiciatis facere officia? Facere consequuntur minima cumque pariatur vero dolorum necessitatibus, animi aperiam tempora similique, fuga laborum debitis neque, incidunt odit excepturi praesentium eveniet ex eius! Adipisci iusto vitae, ducimus cupiditate consectetur deserunt tempore. Voluptas, reprehenderit optio. Nam voluptates nemo minus odio, pariatur eaque consectetur a, ullam quas rem porro quaerat qui? Ea odit perspiciatis delectus adipisci deleniti, ipsa mollitia nemo recusandae dolores, culpa atque odio sed magni maiores ex placeat. Consequatur ut accusamus minus?</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium recusandae mollitia in labore similique facilis beatae eveniet veniam aliquid reprehenderit! Inventore earum voluptate, cupiditate quis saepe sed eos accusantium velit optio assumenda eum sunt fugit consequatur porro! Quos itaque expedita repudiandae facilis molestiae ducimus doloremque odit ut, animi corrupti sunt.</p>
             </div>
         </article>
 
