--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <div class="navbar">
             <ul>
-                <li><a href="#">Plans</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="plans/plans.html">Plans</a></li>
+                <li><a href="gallery/gallery.html">Gallery</a></li>
+                <li><a href="contact/contact.html">Contact</a></li>
+                <li><a href="about/about.html">About</a></li>
             </ul>
         </div>
     </nav>
@@ -41,7 +41,8 @@
             <div class="header-description">
                 <h1>What is ICity?</h1>
                 <hr class="header-hr">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium recusandae mollitia in labore similique facilis beatae eveniet veniam aliquid reprehenderit! Inventore earum voluptate, cupiditate quis saepe sed eos accusantium velit optio assumenda eum sunt fugit consequatur porro! Quos itaque expedita repudiandae facilis molestiae ducimus doloremque odit ut, animi corrupti sunt.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium recusandae mollitia in labore similique facilis beatae eveniet veniam aliquid reprehenderit! Inventore earum voluptate, cupiditate quis saepe sed eos accusantium velit optio assumenda eum sunt fugit consequatur porro! Quos itaque expedita repudiandae facilis molestiae ducimus doloremque odit ut, animi corrupti sunt.</p><br>  
+                <a href="plans/plans.html">See The Plans</a>
             </div>
         </article>
 
@@ -60,7 +61,7 @@
                   <img src="images/picture-3.webp" alt="Image 3">
                 </div>
             </div>
-            <button>See More</button>
+            <a href="gallery/gallery.html">See More</a>
         </div>
     </main>
 
@@ -89,7 +90,7 @@
                 <h3>About Us</h3>
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                <a href="#">See More</a>
+                <a href="about/about.html">See More</a>
             </div>
         </div>
 
