--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
 
     <header>
         <div class="main-header">    
-                <div class="header-main">
-                    <h1>Welcome to ICity</h1>
-                    <hr>
-                    <p>Plans of Smart City For The Future</p>
-                    <a href="#article" id="learn-more">Learn More</a>
-                </div>
+            <div class="header-main">
+                <h1>Welcome to ICity</h1>
+                <hr>
+                <p>Plans of Smart City For The Future</p>
+                <a href="#article" id="learn-more">Learn More</a>
+            </div>
+            <div class="animation-arrow-down"></div>
         </div>
     </header>
 
@@ -41,7 +42,7 @@
             <div class="header-description">
                 <h1>What is ICity?</h1>
                 <hr class="header-hr">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium recusandae mollitia in labore similique facilis beatae eveniet veniam aliquid reprehenderit! Inventore earum voluptate, cupiditate quis saepe sed eos accusantium velit optio assumenda eum sunt fugit consequatur porro! Quos itaque expedita repudiandae facilis molestiae ducimus doloremque odit ut, animi corrupti sunt.</p><br>  
+                <p class="article-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium recusandae mollitia in labore similique facilis beatae eveniet veniam aliquid reprehenderit! Inventore earum voluptate, cupiditate quis saepe sed eos accusantium velit optio assumenda eum sunt fugit consequatur porro! Quos itaque expedita repudiandae facilis molestiae ducimus doloremque odit ut, animi corrupti sunt.</p><br>  
                 <a href="plans/plans.html">See The Plans</a>
             </div>
         </article>
@@ -89,7 +90,7 @@
             <div class="footer-about">
                 <h3>About Us</h3>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <a href="about/about.html">See More</a>
             </div>
         </div>
