--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
         <div class="navbar">
             <ul>
-                <li><a href="plans/plans.html" id="plans">Plans</a></li>
-                <li><a href="gallery/gallery.html" id="gallery">Gallery</a></li>
-                <li><a href="contact/contact.html" id="contact">Contact</a></li>
-                <li><a href="about/about.html" id="about">About</a></li>
+                <li><a href="/lomba-webdesign-new-main/plans/plans.html" id="plans">Plans</a></li>
+                <li><a href="/lomba-webdesign-new-main/gallery/gallery.html" id="gallery">Gallery</a></li>
+                <li><a href="/lomba-webdesign-new-main/contact/contact.html" id="contact">Contact</a></li>
+                <li><a href="/lomba-webdesign-new-main/about/about.html" id="about">About</a></li>
             </ul>
         </div>
     </nav>
