--- a/about/about.html
+++ b/about/about.html
@@ -15,9 +15,9 @@
 
         <div class="navbar">
             <ul>
-                <li><a href="/plans/plans.html" id="plans">Plans</a></li>
-                <li><a href="/gallery/gallery.html" id="gallery">Gallery</a></li>
-                <li><a href="/contact/contact.html" id="contact">Contact</a></li>
+                <li><a href="/lomba-webdesign-new-main/plans/plans.html" id="plans">Plans</a></li>
+                <li><a href="/lomba-webdesign-new-main/gallery/gallery.html" id="gallery">Gallery</a></li>
+                <li><a href="/lomba-webdesign-new-main/contact/contact.html" id="contact">Contact</a></li>
                 <li><a href="#" id="about">About</a></li>
             </ul>
         </div>
