--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <button class="toggleSidebar" id="toggleSidebar">☰</button>
         <div class="logo">
-            <a href="#"><h1>ICity</h1></a>
+            <a href="#"><h1>SidoCrime</h1></a>
         </div>
 
         <div class="navbar">
@@ -43,12 +43,14 @@
     </nav>
 
     <header>
-        <div class="main-header">    
+        <div class="main-header">
+            <div class="map">
+                <style>.embed-container {position: relative; padding-bottom: 64%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><iframe width="940" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.5137,-7.4814,112.9185,-7.2675&home=true&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=dark"></iframe></div>
+            </div>
             <div class="header-main">
-                <h1>Welcome to ICity</h1>
-                <hr>
-                <p>Plans of Smart City For The Future</p>
-                <a href="#article" id="learn-more">Learn More</a>
+                <h1>Welcome to SidoCrime</h1>
+                <br>
+                <a href="#article" id="learn-more">See More</a>
             </div>
             <div class="animation-arrow-down"></div>
         </div>
