--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <title>Home - ICity</title>
+    <title>Home - SidoCrime</title>
     <!-- <style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style> -->
 </head>
 
@@ -19,7 +19,7 @@
 
         <div class="navbar">
             <ul>
-                <li><a href="/lomba-webdesign-new/plans/plans.html" id="plans">Plans</a></li>
+                <li><a href="/lomba-webdesign-new/plans/plans.html" id="plans">Tracking</a></li>
                 <li><a href="/lomba-webdesign-new/gallery/gallery.html" id="gallery">Gallery</a></li>
                 <li><a href="/lomba-webdesign-new/contact/contact.html" id="contact">Contact</a></li>
                 <li><a href="/lomba-webdesign-new/about/about.html" id="about">About</a></li>
@@ -34,7 +34,7 @@
     
             <div class="sidebar-list">
                 <ul>
-                    <li><a href="/lomba-webdesign-new/plans/plans.html" id="plans">Plans</a></li>
+                    <li><a href="/lomba-webdesign-new/plans/plans.html" id="plans">Tracking</a></li>
                     <li><a href="/lomba-webdesign-new/gallery/gallery.html" id="gallery">Gallery</a></li>
                     <li><a href="/lomba-webdesign-new/contact/contact.html" id="contact">Contact</a></li>
                     <li><a href="/lomba-webdesign-new/about/about.html" id="about">About</a></li>
@@ -47,12 +47,14 @@
         <div class="main-header">
             <div class="map">
                 <div class="embed-container">
-                    <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.5137,-7.4814,112.9185,-7.2675&home=true&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=dark"></iframe>
+                    <iframe width="500" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.5137,-7.4814,112.9185,-7.2675&home=true&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=dark"></iframe>
+                    <figcaption>Sumber: Badan Pusat Statistik</figcaption>
                 </div>
             </div>
             <div class="header-main">
-                <h1>Welcome to SidoCrime</h1>
-                <br>
+                <h1>Welcome</h1>
+                <hr>
+                <p>Lorem ipsum dolor sit amet.</p>
                 <a href="#article" id="learn-more">See More</a>
             </div>
             <div class="animation-arrow-down"></div>
@@ -62,10 +64,10 @@
     <main>
         <article id="article">
             <div class="header-description">
-                <h1>What is ICity?</h1>
+                <h1>What is SidoCrime?</h1>
                 <hr class="header-hr">
                 <p class="article-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium recusandae mollitia in labore similique facilis beatae eveniet veniam aliquid reprehenderit! Inventore earum voluptate, cupiditate quis saepe sed eos accusantium velit optio assumenda eum sunt fugit consequatur porro! Quos itaque expedita repudiandae facilis molestiae ducimus doloremque odit ut, animi corrupti sunt. Pellentesque sed nulla gravida, laoreet justo eget, tincidunt ante. Phasellus diam dolor, semper sit amet rhoncus in, placerat ut risus. Nulla efficitur, ante ac feugiat maximus, risus dolor condimentum metus, hendrerit pharetra ante est vel augue. Sed felis enim, consequat non justo id, gravida ullamcorper neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce semper molestie imperdiet. Quisque hendrerit ullamcorper tellus sit amet hendrerit. Proin sit amet dictum tellus, euismod rhoncus odio. Duis dictum neque eu quam sagittis, a viverra nibh suscipit. Nullam id faucibus mi, et condimentum metus. Aliquam sodales leo vel metus lobortis varius. Integer mauris velit, sodales in metus semper, maximus posuere velit.</p><br>
-                <a href="plans/plans.html">See The Plans</a>
+                <a href="plans/plans.html">See Full Tracking Map</a>
             </div>
         </article>
 
@@ -118,7 +120,7 @@
         </div>
 
         <div class="footer-copyright">
-            <p>Absolute Cinema | ICity Corp.</p>
+            <p>Absolute Cinema | SidoCrime Corp.</p>
         </div>
     </footer>
 </body>
