--- a/plans/plans.html
+++ b/plans/plans.html
@@ -17,7 +17,7 @@
 
         <div class="navbar">
             <ul>
-                <li><a href="#" id="plans">Plans</a></li>
+                <li><a href="#" id="plans">Tracking</a></li>
                 <li><a href="/lomba-webdesign-new/gallery/gallery.html" id="gallery">Gallery</a></li>
                 <li><a href="/lomba-webdesign-new/contact/contact.html" id="contact">Contact</a></li>
                 <li><a href="/lomba-webdesign-new/about/about.html" id="about">About</a></li>
@@ -32,7 +32,7 @@
     
             <div class="sidebar-list">
                 <ul>
-                    <li><a href="#" id="plans">Plans</a></li>
+                    <li><a href="#" id="plans">Tracking</a></li>
                     <li><a href="/lomba-webdesign-new/gallery/gallery.html" id="gallery">Gallery</a></li>
                     <li><a href="/lomba-webdesign-new/contact/contact.html" id="contact">Contact</a></li>
                     <li><a href="/lomba-webdesign-new/about/about.html" id="about">About</a></li>
@@ -42,20 +42,11 @@
     </nav>
 
     <header>
-        <h1>The Plans</h1>
+        <h1>Full Tracking Map</h1>
     </header>
 
     <main>
-        <div class="plans-1">
-            <img src="#" alt="Plans-1">
-            <h1>Plans 1</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et recusandae reiciendis sit esse natus nihil nulla ad, minus voluptatibus reprehenderit!</p>
-        </div>
-        <div class="plans-2">
-            <img src="#" alt="Plans-2">
-            <h1>Plans 2</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et recusandae reiciendis sit esse natus nihil nulla ad, minus voluptatibus reprehenderit!</p>
-        </div>
+        <style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 60%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.5137,-7.4814,112.9185,-7.2675&home=true&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=dark"></iframe></div>
     </main>
 
     <footer>
@@ -66,7 +57,7 @@
                 <ul>
                     <li>
                         <i class="ph ph-phone"></i>
-                        +62 1234 5678 9012
+                        +62 812 2586 5919
                     </li>
                     <li>
                         <i class="ph ph-instagram-logo"></i>
