minor bug and map fix

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="main-header">
             <div class="map">
                 <div class="embed-container">
-                    <iframe width="500" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.5137,-7.4814,112.9185,-7.2675&home=true&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=dark"></iframe>
+                    <iframe width="500" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.339,-7.6995,113.1486,-7.272&zoom=false&previewImage=false&scale=false&disable_scroll=true&theme=light"></iframe>
                     <figcaption>Sumber: Badan Pusat Statistik</figcaption>
                 </div>
             </div>
