--- a/plans/plans.html
+++ b/plans/plans.html
@@ -6,13 +6,24 @@
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <title>Plans - ICity</title>
+    <title>Tracking Map - SidoCrime</title>
+    <style>
+        iframe {
+            width: 90%;
+        }
+        main{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
     <nav>
         <button class="toggleSidebar" id="toggleSidebar">☰</button>
         <div class="logo">
-            <a href="../index.html"><h1>ICity</h1></a>
+            <a href="../index.html"><h1>SidoCrime</h1></a>
         </div>
 
         <div class="navbar">
@@ -46,7 +57,7 @@
     </header>
 
     <main>
-        <style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 60%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.5137,-7.4814,112.9185,-7.2675&home=true&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=dark"></iframe></div>
+        <iframe height="700" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.339,-7.6995,113.1486,-7.272&home=true&zoom=true&previewImage=false&scale=true&search=true&searchextent=true&disable_scroll=false&theme=dark"></iframe>
     </main>
 
     <footer>
