Fixed mobile view (not yet for sidebar).

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -6,19 +6,17 @@
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <title>Contact - ICity</title>
+    <title>SidoCrime</title>
 </head>
 <body>
-    <nav>
+    <nav id="nav">
         <button class="toggleSidebar" id="toggleSidebar">☰</button>
         <div class="logo">
-            <a href="../index.html"><h1>ICity</h1></a>
+            <a href="#"><h1>SidoCrime</h1></a>
         </div>
 
         <div class="navbar">
             <ul>
-                <li><a href="/lomba-webdesign-new/plans/plans.html" id="plans">Plans</a></li>
-                <li><a href="/lomba-webdesign-new/gallery/gallery.html" id="gallery">Gallery</a></li>
                 <li><a href="#" id="contact">Contact</a></li>
                 <li><a href="/lomba-webdesign-new/about/about.html" id="about">About</a></li>
             </ul>
@@ -32,9 +30,7 @@
     
             <div class="sidebar-list">
                 <ul>
-                    <li><a href="/lomba-webdesign-new/plans/plans.html" id="plans">Plans</a></li>
-                    <li><a href="/lomba-webdesign-new/gallery/gallery.html" id="gallery">Gallery</a></li>
-                    <li><a href="#" id="contact">Contact</a></li>
+                    <li><a href="/lomba-webdesign-new/contact/contact.html" id="contact">Contact</a></li>
                     <li><a href="/lomba-webdesign-new/about/about.html" id="about">About</a></li>
                 </ul>
             </div>
@@ -42,7 +38,11 @@
     </nav>
 
     <header>
-        <h1>Contact Us</h1>
+        <div class="main-header">
+            <div class="header-main">
+                <h1>Contact Us</h1>
+            </div>
+        </div>
     </header>
 
     <main>
@@ -69,20 +69,29 @@
                         <i class="ph ph-facebook-logo"></i>
                         Facebook
                     </li>
+                    <li>
+                        <i class="ph ph-envelope"></i>
+                        sidocrimecorp@gmail.com
+                    </li>
+                    <li>
+                        <i class="ph ph-map-pin"></i>
+                        456 Oak Avenue, New York, NY 10001, USA
+                    </li>
                 </ul>
             </div>
 
             <div class="footer-about">
                 <h3>About Us</h3>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sit amet neque aliquam, fermentum tellus at, scelerisque leo.</p>
                 <a href="about/about.html">See More</a>
             </div>
         </div>
 
         <div class="footer-copyright">
-            <p>Absolute Cinema | ICity Corp.</p>
+            <p>Absolute Cinema | SidoCrime Corp.</p>
         </div>
+    </footer>
     </footer>
 </body>
 </html>
