perubahan lorem ipsum dan about

--- a/about/about.html
+++ b/about/about.html
@@ -47,7 +47,21 @@
 
     <main>
         <div class="contact">
-
+            <div class="contact12">
+                <img src="" alt="Img">
+                <h1>H4X3L</h1>
+                <p>Damn</p>
+            </div>
+            <div class="contact12">
+                <img src="" alt="Img">
+                <h1>H4X3L</h1>
+                <p>Damn</p>
+            </div>
+            <div class="contact12">
+                <img src="" alt="Img">
+                <h1>H4X3L</h1>
+                <p>Damn</p>
+            </div>
         </div>
     </main>
 
@@ -83,7 +97,7 @@
             <div class="footer-about">
                 <h3>About Us</h3>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sit amet neque aliquam, fermentum tellus at, scelerisque leo.</p>
+                <p>SidoCrime, presented to you by us. Consisting of Fall4, Xurf, and H4x3l. Together, we are Team Lorem Ipsum.</p>
                 <a href="about/about.html">See More</a>
             </div>
         </div>
