--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="map" id="tracking-map">
                 <h1>Crime Map of Sidoarjo</h1>
                 <figure>
-                    <iframe class="iframe-map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.339,-7.6995,113.1486,-7.272&home=true&zoom=true&previewImage=false&scale=true&search=true&searchextent=true&disable_scroll=false&theme=dark&disable_zoom=true&disable_pan=true"></iframe>
+                    <iframe class="iframe-map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.5015,-7.5789,112.9063,-7.3651&home=true&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=light"></iframe>
                     <figcaption>Source: Badan Pusat Statistik</figcaption>
                 </figure>    
             </div>
@@ -99,7 +99,7 @@
             <div class="footer-about">
                 <h3>About Us</h3>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sit amet neque aliquam, fermentum tellus at, scelerisque leo.</p>
+                <p>SidoCrime, presented to you by us. Consisting of Fall4, Xurf, and H4x3l. Together, we are Team Lorem Ipsum.</p>
                 <a href="about/about.html">See More</a>
             </div>
         </div>
