--- a/contact/contact.html
+++ b/contact/contact.html
@@ -83,7 +83,7 @@
             <div class="footer-about">
                 <h3>About Us</h3>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sit amet neque aliquam, fermentum tellus at, scelerisque leo.</p>
+                <p>SidoCrime, presented to you by us. Consisting of Fall4, Xurf, and H4x3l. Together, we are Team Lorem Ipsum.</p>
                 <a href="about/about.html">See More</a>
             </div>
         </div>
