--- a/about/about.html
+++ b/about/about.html
@@ -12,7 +12,7 @@
     <nav id="nav">
         <button class="toggleSidebar" id="toggleSidebar">☰</button>
         <div class="logo">
-            <a href="#"><h1>SidoCrime</h1></a>
+            <a href="../lomba-webdesign-new/index.html"><h1>SidoCrime</h1></a>
         </div>
 
         <div class="navbar">
@@ -30,8 +30,8 @@
     
             <div class="sidebar-list">
                 <ul>
-                    <li><a href="/lomba-webdesign-new/contact/contact.html" id="contact">Contact</a></li>
-                    <li><a href="#" id="about">About</a></li>
+                    <li><a href="/lomba-webdesign-new/contact/contact.html" id="contact-side">Contact</a></li>
+                    <li><a href="#" id="about-side">About</a></li>
                 </ul>
             </div>
         </div>
@@ -46,21 +46,24 @@
     </header>
 
     <main>
-        <div class="contact">
-            <div class="contact12">
-                <img src="" alt="Img">
-                <h1>H4X3L</h1>
-                <p>Damn</p>
+        <div class="about-description">
+            <p>We are Team Lorem Ipsum.</p>
+        </div>
+        <div class="about">
+            <div class="about1">
+                <img src="#" alt="Img">
+                <h1>Fall4</h1>
+                <p>Leader</p>
             </div>
-            <div class="contact12">
-                <img src="" alt="Img">
-                <h1>H4X3L</h1>
-                <p>Damn</p>
+            <div class="about2">
+                <img src="#" alt="Img">
+                <h1>Xurf</h1>
+                <p>Member 1</p>
             </div>
-            <div class="contact12">
-                <img src="" alt="Img">
+            <div class="about3">
+                <img src="#" alt="Img">
                 <h1>H4X3L</h1>
-                <p>Damn</p>
+                <p>Mandor</p>
             </div>
         </div>
     </main>
@@ -105,7 +108,6 @@
         <div class="footer-copyright">
             <p>Absolute Cinema | SidoCrime Corp.</p>
         </div>
-    </footer>
     </footer>
 </body>
 </html>
