--- a/contact/contact.html
+++ b/contact/contact.html
@@ -12,7 +12,7 @@
     <nav id="nav">
         <button class="toggleSidebar" id="toggleSidebar">☰</button>
         <div class="logo">
-            <a href="#"><h1>SidoCrime</h1></a>
+            <a href="../lomba-webdesign-new/index.html"><h1>SidoCrime</h1></a>
         </div>
 
         <div class="navbar">
@@ -30,8 +30,8 @@
     
             <div class="sidebar-list">
                 <ul>
-                    <li><a href="/lomba-webdesign-new/contact/contact.html" id="contact">Contact</a></li>
-                    <li><a href="/lomba-webdesign-new/about/about.html" id="about">About</a></li>
+                    <li><a href="#" id="contact-side">Contact</a></li>
+                    <li><a href="/lomba-webdesign-new/about/about.html" id="about-side">About</a></li>
                 </ul>
             </div>
         </div>
@@ -47,7 +47,26 @@
 
     <main>
         <div class="contact">
-
+            <div class="contact1">
+                <img src="#" alt="telephone">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, ipsa.</p>
+                <a href="tel:+6281234567890">Our Telephone</a>
+            </div>
+            <div class="contact2">
+                <img src="#" alt="instagram">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, ipsa.</p>
+                <a href="https://instagram.com" target="_blank">Our Instagram</a>
+            </div>
+            <div class="contact3">
+                <img src="#" alt="facebook">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, ipsa.</p>
+                <a href="https://facebook.com" target="_blank">Our Facebook</a>
+            </div>
+            <div class="contact4">
+                <img src="#" alt="email">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, ipsa.</p>
+                <a href="mailto:rafaasad9@gmail.com">Our Email</a>
+            </div>
         </div>
     </main>
 
@@ -91,7 +110,6 @@
         <div class="footer-copyright">
             <p>Absolute Cinema | SidoCrime Corp.</p>
         </div>
-    </footer>
     </footer>
 </body>
 </html>
