--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     
             <div class="sidebar-list">
                 <ul>
-                    <li><a href="/lomba-webdesign-new/contact/contact.html" id="contact">Contact</a></li>
-                    <li><a href="/lomba-webdesign-new/about/about.html" id="about">About</a></li>
+                    <li><a href="/lomba-webdesign-new/contact/contact.html" id="contact-side">Contact</a></li>
+                    <li><a href="/lomba-webdesign-new/about/about.html" id="about-side">About</a></li>
                 </ul>
             </div>
         </div>
@@ -61,7 +61,7 @@
                 <h1>Crime Map of Sidoarjo</h1>
                 <figure>
                     <iframe class="iframe-map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.5015,-7.5789,112.9063,-7.3651&home=true&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=light"></iframe>
-                    <figcaption>Source: Badan Pusat Statistik</figcaption>
+                    <figcaption><em>Data Source: Badan Pusat Statistik</em></figcaption>
                 </figure>    
             </div>
         </article>
