--- a/contact/contact.html
+++ b/contact/contact.html
@@ -12,7 +12,7 @@
     <nav id="nav">
         <button class="toggleSidebar" id="toggleSidebar">☰</button>
         <div class="logo">
-            <a href="../lomba-webdesign-new/index.html"><h1>SidoCrime</h1></a>
+            <a href="../index.html"><h1>SidoCrime</h1></a>
         </div>
 
         <div class="navbar">
