add legend and mobile view

--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@
                 <figure>
                     <iframe class="iframe-map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.5015,-7.5789,112.9063,-7.3651&home=true&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=light"></iframe>
                     <figcaption><em>Data Source: Badan Pusat Statistik</em></figcaption>
-                </figure>    
+                    <div class="legend">
+                        <p>Legend:</p>
+                        <p>&#128308 Red Zone : >50 cases</p>
+                        <p>&#128993 Yellow Zone : 21-49 cases</p>
+                        <p>&#128994 Green Zone : <20 cases</p>
+                    </div>
+                </figure>
             </div>
         </article>
     </main>
