--- a/contact/contact.html
+++ b/contact/contact.html
@@ -48,24 +48,24 @@
     <main>
         <div class="contact">
             <div class="contact1">
-                <img src="#" alt="telephone">
+                <i class="ph ph-phone-call" style="font-size: 50px;"></i>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, ipsa.</p>
                 <a href="tel:+6281234567890">Our Telephone</a>
             </div>
             <div class="contact2">
-                <img src="#" alt="instagram">
+                <i class="ph ph-instagram-logo" style="font-size: 50px;"></i>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, ipsa.</p>
                 <a href="https://instagram.com" target="_blank">Our Instagram</a>
             </div>
             <div class="contact3">
-                <img src="#" alt="facebook">
+                <i class="ph ph-facebook-logo" style="font-size: 50px;"></i>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, ipsa.</p>
                 <a href="https://facebook.com" target="_blank">Our Facebook</a>
             </div>
             <div class="contact4">
-                <img src="#" alt="email">
+                <i class="ph ph-envelope" style="font-size: 50px;"></i>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, ipsa.</p>
-                <a href="mailto:rafaasad9@gmail.com">Our Email</a>
+                <a href="mailto:sidocrimecorp@gmail.com">Our Email</a>
             </div>
         </div>
     </main>
