--- a/index.html
+++ b/index.html
@@ -57,21 +57,20 @@
                 <hr class="header-hr">
                 <p class="article-content">SidoCrime is a user-friendly website that helps people track and understand crime in Sidoarjo. The website uses simple maps to show where different crimes have happened, making it easy for everyone to see what is going on in their neighborhood. With updated information about recent incidents, SidoCrime allows residents to stay informed about safety in their area. By providing this information, the website aims to help people feel more secure and encourage them to report any suspicious activities. It also works to strengthen the connection between the community and local law enforcement, making it easier for everyone to work together to prevent crime and improve safety for all.</p>
             </div>
-            <div class="map" id="tracking-map">
+            <div class="tracking-map" id="tracking-map">
                 <h1>Crime Map of Sidoarjo</h1>
                 <figure>
-                    <iframe class="iframe-map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.5015,-7.5789,112.9063,-7.3651&home=true&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=light"></iframe>
-                    <figcaption><em>Data Source: Badan Pusat Statistik</em></figcaption>
-                    <div class="legend">
-                        <p>Legend:</p>
-                        <p>&#128308 Red Zone : >50 cases</p>
-                        <p>&#128993 Yellow Zone : 21-49 cases</p>
-                        <p>&#128994 Green Zone : <20 cases</p>
+                    <div class="map-container">
+                        <iframe class="iframe-map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.5015,-7.5789,112.9063,-7.3651&home=true&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=light"></iframe>
+                        <figcaption><em>Data Source: Badan Pusat Statistik</em></figcaption>
                     </div>
                 </figure>
-            </div>
         </article>
     </main>
+    
+    <div class="call-btn">
+        <a href="#"><i class="ph ph-phone" id="call"></i></a>
+    </div>
 
     <footer>
         <div class="footer-bio">
